# MatrixOPPerf

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  clang_matrix_perf_test.txt  gcc_matrix_perf_test.txt
.devcontainer/: Dockerfile  devcontainer.json
include/xitren/math/: branchless.hpp  detector.hpp  gemm_core.hpp  matrix_alignment.hpp  matrix_classic.hpp  matrix_strassen.hpp
include/xitren/simd/: gemm_double_simd.hpp  gemm_float_simd.hpp  gemm_int8_simd.hpp  operations.h++
src/: operations.cpp
tests/: CMakeLists.txt  math_dgemm_core.cpp  math_dgemm_double.cpp  math_dgemm_float.cpp  math_dgemm_int8.cpp  math_gemm_core.cpp  math_gemm_double.cpp  math_gemm_float.cpp  math_gemm_int8.cpp  math_matrix_test.cpp  matrix_perf_test.cpp  matrix_quant_perf_test.cpp
tests/cuda/: CMakeLists.txt  main.cu
tests/custom/: CMakeLists.txt  matrix_perf_test.cpp
